[package]
name = "jira-tui"
version = "0.1.0"
edition = "2024"

[dependencies]
# Async & Runtime
tokio = { version = "1.36", features = ["full"] }
async-trait = "0.1"
futures = "0.3" # ADDED: Required for stream handling

# Error Handling
thiserror = "1.0"
anyhow = "1.0"

# Serialization & HTTP
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
url = "2.5"

# TUI
ratatui = "0.26"
# CHANGED: Added "event-stream" feature
crossterm = { version = "0.27", features = ["event-stream"] } 

# Utilities
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
log = "0.4"
env_logger = "0.11"
