[package]
name = "jira-tui"
version = "0.1.0-beta.1"
edition = "2024"
authors = ["Sergio Gutierrez"]
description = "Terminal User Interface for Jira - Manage your issues and worklogs from the terminal"
repository = "https://github.com/your-username/jira-tui"
license = "CC-BY-NC-SA-4.0"
keywords = ["jira", "tui", "terminal", "cli", "productivity"]
categories = ["command-line-utilities"]

[dependencies]
# Async & Runtime
tokio = { version = "1.36", features = ["full"] }
async-trait = "0.1"
futures = "0.3" # ADDED: Required for stream handling

# Error Handling
thiserror = "1.0"
anyhow = "1.0"

# Serialization & HTTP
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
url = "2.5"

# TUI
ratatui = "0.26"
# CHANGED: Added "event-stream" feature
crossterm = { version = "0.27", features = ["event-stream"] } 

# Utilities
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
log = "0.4"
env_logger = "0.11"

# Release profile optimizations
[profile.release]
opt-level = 3           # Maximum optimizations
lto = true              # Link-time optimization
codegen-units = 1       # Better optimization, slower compile
strip = true            # Strip symbols from binary
panic = "abort"         # Smaller binary size

# Development profile
[profile.dev]
opt-level = 0           # No optimizations for faster compiles
debug = true            # Include debug symbols
